// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Description List horizontal renders correctly 1`] = `
<jest>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <svg
              class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#geo-alt-fill"
              />
            </svg>
            <div>
              <p
                class="mb-0"
              >
                Only title label with 
                <em>
                  icon
                </em>
              </p>
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Long Description text goes here.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, quam at sollicitudin volutpat, ipsum arcu maximus massa, quis egestas diam tellus vitae nulla.
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <div
              class="align-self-center"
            >
              <span
                class="p-2 me-2 d-inline-block rounded-1 bg-success"
              />
            </div>
            <div>
              First title label
            </div>
          </div>
        </dt>
        <dt>
          <div
            class="d-flex"
          >
            <svg
              class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#geo-alt-fill"
              />
            </svg>
            <div>
              Second title label
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Description text goes here.
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <div>
              Only title 
              <strong>
                label
              </strong>
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Description text goes here.
          </div>
        </dd>
        <dd>
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div
            class="mb-0 d-inline-block"
          >
            Description text goes here.
          </div>
        </dd>
      </div>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div>
            <p
              class="mb-0"
            >
              Only title label with 
              <em>
                icon
              </em>
            </p>
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Long Description text goes here.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, quam at sollicitudin volutpat, ipsum arcu maximus massa, quis egestas diam tellus vitae nulla.
        </div>
      </dd>
    </div>
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <div
            class="align-self-center"
          >
            <span
              class="p-2 me-2 d-inline-block rounded-1 bg-success"
            />
          </div>
          <div>
            First title label
          </div>
        </div>
      </dt>
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div>
            Second title label
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
      </dd>
    </div>
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <div>
            Only title 
            <strong>
              label
            </strong>
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
      </dd>
      <dd>
        <svg
          class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <div
          class="mb-0 d-inline-block"
        >
          Description text goes here.
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title bordered renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <dl
    class="bcl-description-list"
  >
    <div
      class="border-bottom pb-2-5 mb-2-5"
    >
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div>
            <p
              class="mb-0"
            >
              Only title label with 
              <em>
                icon
              </em>
            </p>
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Long Description text goes here.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, quam at sollicitudin volutpat, ipsum arcu maximus massa, quis egestas diam tellus vitae nulla.
        </div>
      </dd>
    </div>
    <div
      class="border-bottom pb-2-5 mb-2-5"
    >
      <dt>
        <div
          class="d-flex"
        >
          <div
            class="align-self-center"
          >
            <span
              class="p-2 me-2 d-inline-block rounded-1 bg-success"
            />
          </div>
          <div>
            First title label
          </div>
        </div>
      </dt>
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div>
            Second title label
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
      </dd>
    </div>
    <div
      class="border-bottom pb-2-5 mb-2-5"
    >
      <dt>
        <div
          class="d-flex"
        >
          <div>
            Only title 
            <strong>
              label
            </strong>
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
      </dd>
      <dd>
        <svg
          class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <div
          class="mb-0 d-inline-block"
        >
          Description text goes here.
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title horizontal and bordered renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="border-bottom pb-2-5 mb-2-5 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <svg
              class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#geo-alt-fill"
              />
            </svg>
            <div>
              <p
                class="mb-0"
              >
                Only title label with 
                <em>
                  icon
                </em>
              </p>
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Long Description text goes here.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, quam at sollicitudin volutpat, ipsum arcu maximus massa, quis egestas diam tellus vitae nulla.
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="border-bottom pb-2-5 mb-2-5 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <div
              class="align-self-center"
            >
              <span
                class="p-2 me-2 d-inline-block rounded-1 bg-success"
              />
            </div>
            <div>
              First title label
            </div>
          </div>
        </dt>
        <dt>
          <div
            class="d-flex"
          >
            <svg
              class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#geo-alt-fill"
              />
            </svg>
            <div>
              Second title label
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Description text goes here.
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="border-bottom pb-2-5 mb-2-5 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <div>
              Only title 
              <strong>
                label
              </strong>
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Description text goes here.
          </div>
        </dd>
        <dd>
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div
            class="mb-0 d-inline-block"
          >
            Description text goes here.
          </div>
        </dd>
      </div>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title horizontal renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <svg
              class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#geo-alt-fill"
              />
            </svg>
            <div>
              <p
                class="mb-0"
              >
                Only title label with 
                <em>
                  icon
                </em>
              </p>
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Long Description text goes here.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, quam at sollicitudin volutpat, ipsum arcu maximus massa, quis egestas diam tellus vitae nulla.
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <div
              class="align-self-center"
            >
              <span
                class="p-2 me-2 d-inline-block rounded-1 bg-success"
              />
            </div>
            <div>
              First title label
            </div>
          </div>
        </dt>
        <dt>
          <div
            class="d-flex"
          >
            <svg
              class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#geo-alt-fill"
              />
            </svg>
            <div>
              Second title label
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Description text goes here.
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <div>
              Only title 
              <strong>
                label
              </strong>
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Description text goes here.
          </div>
        </dd>
        <dd>
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div
            class="mb-0 d-inline-block"
          >
            Description text goes here.
          </div>
        </dd>
      </div>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title horizontal with different col size renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <svg
              class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#geo-alt-fill"
              />
            </svg>
            <div>
              <p
                class="mb-0"
              >
                Only title label with 
                <em>
                  icon
                </em>
              </p>
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Long Description text goes here.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, quam at sollicitudin volutpat, ipsum arcu maximus massa, quis egestas diam tellus vitae nulla.
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <div
              class="align-self-center"
            >
              <span
                class="p-2 me-2 d-inline-block rounded-1 bg-success"
              />
            </div>
            <div>
              First title label
            </div>
          </div>
        </dt>
        <dt>
          <div
            class="d-flex"
          >
            <svg
              class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
            >
              <use
                xlink:href="/icons.svg#geo-alt-fill"
              />
            </svg>
            <div>
              Second title label
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Description text goes here.
          </div>
        </dd>
      </div>
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      >
        <dt>
          <div
            class="d-flex"
          >
            <div>
              Only title 
              <strong>
                label
              </strong>
            </div>
          </div>
        </dt>
      </div>
      <div
        class="col"
      >
        <dd>
          <div>
            Description text goes here.
          </div>
        </dd>
        <dd>
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div
            class="mb-0 d-inline-block"
          >
            Description text goes here.
          </div>
        </dd>
      </div>
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title renders correctly 1`] = `
<jest>
  <h6
    class="bcl-heading"
  >
    Description list test title
  </h6>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div>
            <p
              class="mb-0"
            >
              Only title label with 
              <em>
                icon
              </em>
            </p>
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Long Description text goes here.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, quam at sollicitudin volutpat, ipsum arcu maximus massa, quis egestas diam tellus vitae nulla.
        </div>
      </dd>
    </div>
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <div
            class="align-self-center"
          >
            <span
              class="p-2 me-2 d-inline-block rounded-1 bg-success"
            />
          </div>
          <div>
            First title label
          </div>
        </div>
      </dt>
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div>
            Second title label
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
      </dd>
    </div>
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <div>
            Only title 
            <strong>
              label
            </strong>
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Description text goes here.
        </div>
      </dd>
      <dd>
        <svg
          class="me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <div
          class="mb-0 d-inline-block"
        >
          Description text goes here.
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title with inline icon renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <div>
            <svg
              class="me-2 bi icon--fluid"
            >
              <use
                xlink:href="/icons.svg#printer-fill"
              />
            </svg>
            Only title 
            <strong>
              label
            </strong>
             with inline icon
          </div>
        </div>
      </dt>
      <dd>
        <div>
          <svg
            class="me-2 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
          Description text goes here.
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title with new classes on definition icon renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <div>
            Term title
          </div>
        </div>
      </dt>
      <dd>
        <svg
          class="new-class me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
        >
          <use
            xlink:href="/icons.svg#geo-alt-fill"
          />
        </svg>
        <div
          class="mb-0 d-inline-block"
        >
          <p
            class="mb-0"
          >
            Only title label with 
            <em>
              icon
            </em>
          </p>
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;

exports[`OE - Description List with title with new classes on term icon renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    >
      <dt>
        <div
          class="d-flex"
        >
          <svg
            class="new-class me-2 align-self-center flex-shrink-0 bcl-icon bi icon--xs"
          >
            <use
              xlink:href="/icons.svg#geo-alt-fill"
            />
          </svg>
          <div>
            <p
              class="mb-0"
            >
              Only title label with 
              <em>
                icon
              </em>
            </p>
          </div>
        </div>
      </dt>
      <dd>
        <div>
          Long Description text goes here.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, quam at sollicitudin volutpat, ipsum arcu maximus massa, quis egestas diam tellus vitae nulla.
        </div>
      </dd>
    </div>
  </dl>
</jest>
`;
